containers visibility fixed/ Proud and Trending

--- a/src/components/Proud.css
+++ b/src/components/Proud.css
@@ -1,4 +1,3 @@
-
 .proud {
 	padding-top: 5rem;
 }
@@ -14,13 +13,22 @@
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	gap: 1.3rem;
 }
+
+.product-header {
+	height: 70%;
+}
+
 .product-header img {
 	width: 100%;
 }
+
 .product {
 	outline: 2px solid rgba(0, 0, 0, 0.2);
 	outline-offset: -2px;
 	transition: outline 0.1s ease-in;
+	display: flex;
+	flex-direction: column;
+	padding: 0.5rem;
 }
 .product:hover {
 	outline: 2px solid rgba(0, 0, 0, 0.7);
@@ -28,11 +36,19 @@
 
 .product-details {
 	font-size: 1.2rem;
-	padding: 1rem;
+	height: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding-top: 0.5rem;
+}
+
+.product-details p {
+	text-align: center;
 }
 
 .item-price {
 	font-size: 1.5rem;
 	font-weight: 600;
-	margin-top: 0.5rem;
+	padding-top: 0.5rem;
 }
