--- a/src/components/Trending.css
+++ b/src/components/Trending.css
@@ -53,6 +53,11 @@
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
+
+.product-trending-header {
+	height: 70%;
+}
+
 .product-trending-header img {
 	width: 13rem;
 }
@@ -61,6 +66,9 @@
 	outline: 2px solid rgba(0, 0, 0, 0.2);
 	outline-offset: -2px;
 	transition: outline 0.1s ease-in;
+	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
 }
 .product-trending:hover {
 	outline: 2px solid rgba(0, 0, 0, 0.7);
@@ -68,11 +76,16 @@
 
 .product-trending-details {
 	font-size: 1rem;
-	padding: 1rem;
+	height: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	text-align: center;
+	padding-top: 0.5rem;
 }
 
 .item-trending-price {
 	font-size: 1.3rem;
 	font-weight: 600;
-	margin-top: 0.5rem;
+	padding-top: 0.5rem;
 }
